@@ -3,7 +3,7 @@
 # ----------------------------------------------------
 
 # Static values
-__version__ = '0.5.17'
+__version__ = '0.5.18'
 NAME = 'xmldiff'
 VERSION = [int(i) if i.isdigit() else i for i in __version__.split('.')]
 
